--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "live2",
   "private": true,
   "scripts": {
+    "start": "vite",
     "dev": "vite",
     "build": "vite build",
     "serve": "vite preview"
