--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   "devDependencies": {
     "@vitejs/plugin-vue": "^1.1.4",
     "@vue/compiler-sfc": "^3.0.5",
+    "eslint": "^7.19.0",
+    "eslint-plugin-vue": "^7.5.0",
     "vite": "^2.0.0-beta.65"
   }
 }
