--- a/.eslintrc
+++ b/.eslintrc
@@ -3,6 +3,6 @@
   "env": {
     "node": true
   },
-  "extends": ["plugin:vue/vue3-essential", "eslint:recommended"],
+  "extends": ["plugin:vue/vue3-essential"],
   "rules": { "no-unused-vars": "off" }
 }
