--- a/package.json
+++ b/package.json
@@ -16,5 +16,17 @@
     "eslint": "^7.19.0",
     "eslint-plugin-vue": "^7.5.0",
     "vite": "^2.0.0-beta.65"
+  },
+  "eslintConfig": {
+    "root": true,
+    "env": {
+      "node": true
+    },
+    "extends": [
+      "plugin:vue/vue3-essential"
+    ],
+    "rules": {
+      "no-unused-vars": "off"
+    }
   }
 }
