--- a/sandbox.config.json
+++ b/sandbox.config.json
@@ -1,8 +1,3 @@
 {
-  "view": "browser",
-  "container": {
-    "node": "14",
-    "port": 3000
-  },
-  "hardReloadOnChange": true
+  "template": "nuxt"
 }
