--- a/sandbox.config.json
+++ b/sandbox.config.json
@@ -1,6 +1,8 @@
 {
   "template": "nuxt",
   "container": {
-    "node": "14"
-  }
+    "node": "14",
+    "port": 3000
+  },
+  "hardReloadOnChange": true
 }
