--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "serve": "vite preview"
   },
   "dependencies": {
+    "hls.js": "^0.14.17",
     "vue": "^3.0.5"
   },
   "devDependencies": {
