--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "hls.js": "^0.14.17",
+    "reconnecting-websocket": "^4.4.0",
     "vue": "^3.0.5",
     "vue-router": "^4.0.3"
   },
