feat: ws rework (#6)

--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "serve": "vite preview"
   },
   "dependencies": {
+    "@vueuse/core": "^4.1.0",
     "hls.js": "^0.14.17",
+    "lodash": "^4.17.20",
+    "reconnecting-websocket": "^4.4.0",
     "vue": "^3.0.5",
     "vue-router": "^4.0.3"
   },
