--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "@vue/compiler-sfc": "^3.0.5",
     "eslint": "^7.19.0",
     "eslint-plugin-vue": "^7.5.0",
-    "vite": "^2.0.0-beta.65"
+    "vite": "^2.0.0-beta.65",
+    "vite-plugin-fonts": "^0.1.5"
   },
   "eslintConfig": {
     "root": true,
