--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,5 @@
-VITE_STREAM_URL=
-VITE_EVENTS_URL=
+VITE_STREAM_URL=""
+VITE_CALENDAR_URL=""
+VITE_SHEET_URL=""
+VITE_WS_URL=""
+VITE_HISTORY_URL=""
