--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "@vueuse/core": "^4.1.0",
+    "date-fns": "^2.17.0",
     "hls.js": "^0.14.17",
     "lodash": "^4.17.20",
     "reconnecting-websocket": "^4.4.0",
