--- a/.env.example
+++ b/.env.example
@@ -4,8 +4,10 @@ VITE_HISTORY_URL=
 VITE_INDEX_URL=
 VITE_STREAM_URL=
 VITE_WS_URL=
-#VITE_CORS_URL="https://api.allorigins.win/raw?url=\${url}"
 VITE_FACEBOOK_URL=
 VITE_INSTAGRAM_URL=
 VITE_TWITTER_URL=
 VITE_YOUTUBE_URL=
+VITE_EMAIL_URL=
+VITE_CORS_URL=
+VITE_NEW_FEATURES=
