--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "ky": "^0.27.0",
     "lodash": "^4.17.20",
     "reconnecting-websocket": "^4.4.0",
+    "three": "^0.126.1",
     "vue": "^3.0.5",
     "vue-router": "^4.0.3"
   },
