feat: new server implementation (#81)

--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,6 @@
-VITE_CALENDAR_URL=
 VITE_EVENTS_URL=
-VITE_HISTORY_URL=
-VITE_INDEX_URL=
+VITE_MESSAGES_URL=
+VITE_PAGES_URL=
 VITE_STREAM_URL=
 VITE_WS_URL=
 VITE_FACEBOOK_URL=
@@ -10,7 +9,7 @@ VITE_TWITTER_URL=
 VITE_YOUTUBE_URL=
 VITE_EMAIL_URL=
 VITE_CORS_URL=
-VITE_NEW_FEATURES=
 VITE_FIENTA_URL=
+VITE_FIENTA_TICKET_URL=
 VITE_FIENTA_TOKEN=
-VITE_FIENTA_TESTCODE=
+VITE_NEW_FEATURES=
